Estructura primitiva de la cabecera

--- a/articulo.html
+++ b/articulo.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Un título atractivo e interesante</h1>
                 <p>Éste es el párrafo de inicio, el que mostramos las
