--- a/articulo.html
+++ b/articulo.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Artículo de aprendizaje.
+                <span id="tagline">Tu fuente de información de confianza</span>
             </div>
             <div id="post">
                 <h1>Un título atractivo e interesante</h1>
