agregrege mi nombre de usuario

--- a/blogpost.html
+++ b/blogpost.html
@@ -29,6 +29,7 @@
                 <p>@centenarioalta</p>
                 <p>JuanDC</p>
                 <p>@elyager</p>
+                <p>Ivan Umanzor</p>
                 <p>JamaHCS</p>
                 <p>Oscar Daniel</p>
                 <p>Claudio Vazquez<p>
