Comit 2 para pull

--- a/blogpost.html
+++ b/blogpost.html
@@ -366,7 +366,7 @@
                 <p>@Bismarck</p>
                 <p>Sebastian Edgardo Pacheco Ramos</p>
                 <p>TheDiegox</p>
-                <p>@EdwardHernandezN<>
+                <p>@EdwardHernandezN</p>
                 <p>@MigueMartelo</p>
                 <p>Jes&uacute;s CH92</p>
                 <p>Emanuel Mamani</p>
