agrego mi nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -832,8 +832,9 @@
                 <p>Mario Yesid Acuña Garizado</p>
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
-                <p>Juan Carlos Carbajal Salgado</p>
-            </div>
+	        <p>Juan Carlos Carbajal Salgado</p>
+	        <p>Marcelito Mollo</p> 
+	    </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
             </div>
