--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Artículo de aprendizaje.
-                <span id="tagline">Tu fuente de información de confianza</span>
+                <span id="tagline">Tu fuente de información maestro</span>
             </div>
             <div id="post">
                 <h1>Un título atractivo e interesante</h1>
@@ -17,6 +17,7 @@
                 <p>Algún día podré conseguir un trabajo como programador
                     hacerme cargo de mi familia
                 </p>
+                <p>Suscríbete y dale megusta o sos un puto</p>
             </div>
         </div>
     </body>
