Cambie el titulo del blogpost

--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Título de la publicación</title>
+        <title>Bienvenido a hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
