--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a hyperblog 2.0</title>
+        <title>Bienvenido a hyperblog 2.0, lo hago por obligación</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
