--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png" />
+                <img id="logo" src="https://pbs.twimg.com/profile_images/1259731521939873795/6M_SgYG5_400x400.jpg" />
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
