Un mensaje bonito

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,8 @@
                 <p>Suscribete y dale like</p>
 
                 <p>Sergio Iván Piñón Peña</p>
-                <p>Edgar Barragán</p>
+                <p>@NioMxnoz</p>
+		<p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
                 <p>Moises Patiño</p>  
