Modificaciones en rama experiments

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <p>Header</p>
         <h1>DANTE'S BLOGPOST</h1>
-        <p>This is my main blogpost</p>
+        <p>This is my header blogpost</p>
         <div>
             <p>
                 lorem ipsum dolor sit amet, consectetur adip, lorem ipsum dolor sit amet, consectetur adip.
