--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <p>Header</p>
-        <h1>DANTE'S BLOGPOST</h1>
+        <h1>DANTE'S BLOGPOST - </h1>
         <p>This is my header blogpost</p>
         <div>
             <p>
