Cambios en rama master

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <p>Main</p>
         <h1>DANTE'S BLOGPOST</h1>
         <p>This is my main blogpost</p>
         <div>
