--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div id="container">
         <p>Header</p>
-        <h1>DANTE'S BLOGPOST - </h1>
-        <p>This is my header blogpost</p>
+        <div id="title">
+            <h1>DANTE'S BLOGPOST </h1>
+        </div>
         <div>
             <p>
                 lorem ipsum dolor sit amet, consectetur adip, lorem ipsum dolor sit amet, consectetur adip.
