cambie el titulo
cambie el titulo como parte de la clase

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>El titulo del post</title>
+<title>El titulo del post voy a deditar</title>
 <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
