--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>El titulo del post voy a deditar</title>
-<link rel="stylesheet" href="css/estilos.css" />
+<link rel="stylesheet" href="./css/estilos.css" />
 </head>
 <body>
 <div id="container">
