Realizado el cambio de versión del blog

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <p>Header</p>
         <div id="title">
-            <h1>DANTE'S BLOGPOST </h1>
+            <h1>DANTE'S BLOGPOST 2.0</h1>
         </div>
         <div>
             <p>
