agregando el nombre Juan Jose Bailon

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                 <p>Suscribete y dale like</p>
 
                 <p>Sergio Iván Piñón Peña</p>
+		<P>Juan Jose Bailon</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
