Agrego mi nombre: Jeison Vasquez

--- a/blogpost.html
+++ b/blogpost.html
@@ -829,6 +829,7 @@
                 <p>Gast&oacute;n Konstantinides</p>
                 <p>@Gabospa</p>
                 <p>Juan Carlos Rinc&oacute;n G&oacute;mez</p>
+                <p>Jeison Vasquez</p>
                 <p>Mario Yesid Acuña Garizado</p>
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
