--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>El titulo del post voy a deditar</title>
+<title>El titulo del post voy a deditar 2.0</title>
 <link rel="stylesheet" href="./css/estilos.css" />
 </head>
 <body>
