--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
                 <p><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwebadictos.com%2Fmedia%2F2015%2F12%2Fplatzi.png&f=1&nofb=1" width="100%"  alt="Platzi's Logo"/></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
-
+                
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Kevin Alejandro Salazar @ButchBet</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
