Agregue la imagen para el cambio

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png" />
+                <p><a href="https://imgur.com/P0uCD21"><img src="https://i.imgur.com/P0uCD2l.jpg" width="100%" title="descripcion de la imagen" /></a></p>
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
