--- a/blogpost.html
+++ b/blogpost.html
@@ -833,10 +833,11 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Sofia Andrade Palacio</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
             </div>
         </div>
     </body>
-</html>
+
