--- a/blogpost.html
+++ b/blogpost.html
@@ -11,9 +11,14 @@
                 <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
-                <h1>Aqu&iacute; inicia la HISTORIA de un gran proyecto</h1>
+                <h1>Aqu&iacute; inicia la HISTORIA de un gran PROYECTO</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+                <p>
+                    <img src="https://i.imgur.com/BKW6f0g.jpg" width="100%" />                    
+                </p>
+                
+
+
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
