Puse los nombres que habia quitado sin querer queriendo

--- a/blogpost.html
+++ b/blogpost.html
@@ -811,6 +811,27 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+		<p>david-behar</p>
+                <p>Eliezer Erosa</p>
+                <p>Edylber Simancas</p>
+                <p>redDiego15</p>
+                <p>Yenny Garavito</p>
+                <p>Marcos Emilio Vel&aacute;squez Hidalgo</p>
+                <p>Jose Fernando Espinosa Beltr&aacute;n</p>
+                <p>DavidZabaleta</p>
+                <p>jeison hurtado cabrera</p>
+                <p>sagomeza</p>
+                <p>Luis Guillermo</p>
+                <p>Mariano Fuhr</p>
+                <p>@Gustavo08</p>
+                <p>Maicol Stiven Bautista Reyes</p>
+                <p>Juan sebast&iacute;an Sierra S&aacute;nchez</p>
+                <p>Kinslert Daniel Virguez</p>
+                <p>Esteban Saldarriaga Alzate</p>
+                <p>Carlos Opazo Rosales</p>
+                <p>Juan Sebastian Durango Mora</p>
+                <p>Juan Zabala</p>
+                <p>Angel Mambel</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
