Agregue mi nombre. Salu2.

--- a/blogpost.html
+++ b/blogpost.html
@@ -182,6 +182,7 @@
                 <p>@jesus-olivares661</p>
                 <p>Julio Perdomo</p>
                 <p>Daniel Correa</p>
+                <p>Alfredo Zuñiga E.</p>
                 <p>Mariang&eacute;lica Useche Saavedra</p>
                 <p>Luis Antonio Moreno</p>
                 <p>Alvaro Garracini</p>
