I've add my name and also fix a little mistake on line 60

--- a/blogpost.html
+++ b/blogpost.html
@@ -57,7 +57,7 @@
                 <p>Eden Verdugo</p>
                 <p>Alex Abel Lerman</p>
                 <p>Víctor Landa</p>
-                <p>Pablo C&oacute;rdoba</>
+                <p>Pablo C&oacute;rdoba</p>
                 <p>FixingMind5</p>
                 <p>Max88</p>
                 <p>Uzziel Adolfo Sol&iacute;s Vega</p>
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Luis Carmona</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
