--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
+                <p>Sergio Gustavo Jáuregui Angel</p>
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
@@ -57,7 +58,7 @@
                 <p>Eden Verdugo</p>
                 <p>Alex Abel Lerman</p>
                 <p>Víctor Landa</p>
-                <p>Pablo C&oacute;rdoba</>
+                <p>Pablo C&oacute;rdoba</p>
                 <p>FixingMind5</p>
                 <p>Max88</p>
                 <p>Uzziel Adolfo Sol&iacute;s Vega</p>
