incluyo mi nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,13 +2,12 @@
     <head>
 
         <title>Hyperblog 2.0 es un blog del futuro</title>
->>>>>>> 0cc672ac066f4d118205aaca7da635219df00e48
-        <link rel="stylesheet" href="css/estilos.css" />
+        <link rel="stylesheet" href="./css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png" />
+                <img id="logo" src="./imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
@@ -835,6 +834,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Andres Camilo Rincón Valencia</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
