--- a/blogpost.html
+++ b/blogpost.html
@@ -833,9 +833,10 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
-            </div>
+        	 <p>Arluna Sebastian</p>
+	 </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+             Hecho con amor en Platzi &lt;3
             </div>
         </div>
     </body>
