Agrego mi nombre al proyecto

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Hyperblog 2.0 es un blog del futuro</title>
-        <link rel="stylesheet" href="css/estilos.css" />
+       <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
@@ -16,6 +16,7 @@
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
+		<p>Hernan Gallegos</p>
 
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
