--- a/blogpost.html
+++ b/blogpost.html
@@ -2,6 +2,8 @@
     <head>
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
+        <meta charset="UTF-8">
+
     </head>
     <body>
         <div id="container">
@@ -833,6 +835,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Xiomara Alejandra Hernández Arzola</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
