Ejercicio HazmeUnPullRequest completado

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,26 +12,35 @@
             </div>
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p>
+                    Y este es el p&aacute;rrafo de inicio donde vamos a explicar
+                    las cosas incre&iacute;bles que se pueden hacer con ramas
+                </p>
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
-                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
+                <p>
+                    Los blogs son la mejor forma de compartir informaci&oacute;n
+                    y tus ideas. Mucho mas que ir a conferencias o salir en
+                    Youtube. Excepto si eres un rockstar. Pero
+                    estad&iacute;sticamente no lo eres.... por ahora.
+                </p>
                 <p>Suscribete y dale like</p>
 
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
-                <p>Moises Patiño</p>  
+                <p>Moises Patiño</p>
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
-              	<p>Giselle Castillo</p>
+                <p>Giselle Castillo</p>
                 <p>@centenarioalta</p>
                 <p>JuanDC</p>
                 <p>@elyager</p>
                 <p>JamaHCS</p>
                 <p>Oscar Daniel</p>
-                <p>Claudio Vazquez<p>
+                <p>Claudio Vazquez</p>
+                <p></p>
                 <p>Juan Ageitos</p>
                 <p>galvismj</p>
                 <p>crumblecoder</p>
@@ -57,7 +66,7 @@
                 <p>Eden Verdugo</p>
                 <p>Alex Abel Lerman</p>
                 <p>Víctor Landa</p>
-                <p>Pablo C&oacute;rdoba</>
+                <p>Pablo C&oacute;rdoba</p>
                 <p>FixingMind5</p>
                 <p>Max88</p>
                 <p>Uzziel Adolfo Sol&iacute;s Vega</p>
@@ -159,7 +168,8 @@
                 <p>Starling Germosen</p>
                 <p>Guillermo Navarro</p>
                 <p>Roberto Marzoa</p>
-                <p>@leonardodaniel<p>
+                <p>@leonardodaniel</p>
+                <p></p>
                 <p>Saul Montes De Oca</p>
                 <p>Juli4nDev</p>
                 <p>cjimd90</p>
@@ -318,7 +328,8 @@
                 <p>Juan Mart&iacute;n Jim&eacute;nez Sardi</p>
                 <p>Rhonald S&aacute;nchez</p>
                 <p>Junior De La Roche</p>
-                <p>@yersonsolorzanolopez<p>
+                <p>@yersonsolorzanolopez</p>
+                <p></p>
                 <p>Gonzalo Cofr&eacute;</p>
                 <p>Gerardo Ruiz Dana</p>
                 <p>Ricardo Coronado</p>
@@ -366,7 +377,8 @@
                 <p>@Bismarck</p>
                 <p>Sebastian Edgardo Pacheco Ramos</p>
                 <p>TheDiegox</p>
-                <p>@EdwardHernandezN<p>
+                <p>@EdwardHernandezN</p>
+                <p></p>
                 <p>@MigueMartelo</p>
                 <p>Jes&uacute;s CH92</p>
                 <p>Emanuel Mamani</p>
@@ -833,10 +845,9 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Ramiro Eduardo Fuentes Hernández</p>
             </div>
-            <div id="footer">
-              Hecho con amor en Platzi &lt;3
-            </div>
+            <div id="footer">Hecho con amor en Platzi &lt;3</div>
         </div>
     </body>
 </html>
