Foto Platzi Team y Corazón
En el footer agregué un corazón verde y cambié la referencia de la imagen del Platzi Team

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+                <p><img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fencrypted-tbn0.gstatic.com%2Fimages%3Fq%3Dtbn%3AANd9GcSd-SSYsRIoT5y4I1Y0ZBqFUvM_ao7h3HNZ0IEP2HwQDxV5rls%26s&sp=1656664909T89ed31781686e795a88148d9c6ff5dc0a0622f030ed4d6b516300f203f1844fc" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
@@ -836,7 +836,7 @@
                 <p>&Aacute;ngel Tondop&oacute; &#128406;</p>
             </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+              Hecho con amor en Platzi &#128154;
             </div>
         </div>
     </body>
