--- a/blogpost.html
+++ b/blogpost.html
@@ -366,7 +366,7 @@
                 <p>@Bismarck</p>
                 <p>Sebastian Edgardo Pacheco Ramos</p>
                 <p>TheDiegox</p>
-                <p>@EdwardHernandezN<p>
+                <p>@EdwardHernandezN<>
                 <p>@MigueMartelo</p>
                 <p>Jes&uacute;s CH92</p>
                 <p>Emanuel Mamani</p>
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Juan David Uribe Restrepo</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
