--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-aprendiendo github
-ya casi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi primera pagWeb</title>
+</head>
+<body>
+    <h1>Aqui voy a hacer un blog post</h1>
+    <p>Y este es el primer parrafo</p>    
+</body>
+</html>
