--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera pagWeb</title>
-</head>
+    <title>Mi primera pagWeb</title>}
+    <link rel="stylesheet" href="css/ estilos.css" />
+   </head>
 <body>
-    <h1>Aqui voy a hacer un blog post</h1>
-    <p>Y este es el primer parrafo</p>    
+    <div id="container">
+        <div id="post">
+            <h1>Aqui voy a hacer un blog post</h1>
+            <p>Y este es el primer parrafo</p> 
+        </div>
+    </div>         
 </body>
 </html>
