--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera pagWeb</title>}
-    <link rel="stylesheet" href="css/ estilos.css" />
+    <title>Mi primera pagWeb</title>
+    <link rel="stylesheet" href="estilos.css" />
    </head>
 <body>
     <div id="container">
