--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div id="container">
         <div id="post">
+            <div id="cabecera">
+                cabecera
+            </div>
             <h1>Aqui voy a hacer un blog post</h1>
             <p>Y este es el primer parrafo</p> 
         </div>
