--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Aqui voy a hacer un blog post</h1>
             <p>Y este es el primer parrafo</p> 
+            <p>vamos</p>
         </div>
     </div>         
 </body>
