--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 cabecera
             </div>
             <h1>Aqui voy a hacer un blog post</h1>
-            <p>Y este es el primer parrafo</p> 
+            <p>Y este es el primer parrafo</p>
+            <p>avanzando</p> 
         </div>
     </div>         
 </body>
