--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Git .ssh</title>
+    <title>MÍ Git .ssh</title>
     <link rel="stylesheet" href="css/estilos.css" />
    </head>
 <body>
@@ -13,7 +13,7 @@
             <div id="cabecera">
                 cabecera
             </div>
-            <h1>Aqui voy a hacer un blog post</h1>                              
+            <h1>Aquí voy a hacer un blog post</h1>                              
             <p>Y este es el primer parrafo</p>
             <p>avanzando</p> 
         </div>
