--- a/blogpost.html
+++ b/blogpost.html
@@ -397,7 +397,9 @@
                 <p>Jesus Leonardo Garcia Hoyos</p>
                 <p>Leonardo Rivero</p>
                 <p>Renato Johao Balcazar Loaiza</p>
-                <p>Pedro Chac&oacute;n</p>
+</p>
+                <p>Jesus Haans</p>
+                <p>Bryan Cipriano Tara                <p>Pedro Chac&oacute;n</p>
                 <p>José Bryan Aranda Figueroa</p>
                 <p>@jesus-castellanos50</p>
                 <p>Hector Garzon</p>
@@ -807,9 +809,6 @@
                 <p>Carlos Opazo Rosales</p>
                 <p>Juan Sebastian Durango Mora</p>
                 <p>Juan Zabala</p>
-                <p>Angel Mambel</p>
-                <p>Mauricio Combariza</p>
-                <p>Oscar Mizael Nuñez Garcia</p>
                 <p>aviloncho</p>
                 <p>Dal&iacute; Andr&eacute;s Ju&aacute;rez Vel&aacute;zquez</p>
                 <p>@CristianSCh</p>
