Añadir Colaborador - Jonathan Rocha

--- a/blogpost.html
+++ b/blogpost.html
@@ -832,6 +832,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+		<p>Jonathan Steven Rocha Trina</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
