Commit al master del blogpost en su versión más reciente

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/estilos.css">
-    <title>Document</title>
-</head>
+<html>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
 <body>
-    <h1>Aquí vamos hacer un blogpost</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+        </div>
+</div>
 </body>
 </html>
