agregamos un Master 3 en historia para probar el amend

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
         </p>
         <p>Suscribete y dale like</p>
 
-        <p>Génesis Patiño</p>
+        <p>G&eacute;nesis Patiño</p>
         <p>Sergio Iván Piñón Peña</p>
         <p>Edgar Barragán</p>
         <p>@luiscarlos</p>
