Cabecera footer terminado

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Bienvenido a hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css" />
+        <meta charset="UTF-8">
     </head>
 <body>
     <div id="container">
@@ -14,6 +15,7 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
         </div>
+        <div id="footer">Hecho con amor por Platzi <3</div>
 </div>
 </body>
 </html>
