--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p><img scr='Imagenes/doncella.jpeg' width="100%"/></p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
         </div>
         <div id="footer">Hecho con amor por Platzi <3</div>
