agregue mi nombre
josman

--- a/blogpost.html
+++ b/blogpost.html
@@ -780,6 +780,7 @@
                 <p>Sneyder Alfonso Barreto Buitrago</p>
                 <p>Camilo Gaviño</p>
                 <p>Marco Andres De la Torre Gonzalez</p>
+                <p>josman jimenez </p>
                 <p>Jose Antonio Pinto Gimeno</p>
                 <p>Carlos Pernia</p>
                 <p>Diego Andr&eacute;s Guzm&Aacute;n</p>
