--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,8 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
-                <p>Sergio Iván Piñón Peña</p>
+		<p>Felipe Vel&aacute;squez</p>
+		<p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
@@ -839,4 +840,4 @@
             </div>
         </div>
     </body>
-</html>
+</html>BOB
