escribi mi nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,14 +16,15 @@
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
-
+                
+                <p> Jose Ivan Marin Marin</p>
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
                 <p>Moises Patiño</p>  
                 <p>Ismael Dominguez Moreno</p>
-                <p>Edgar Hern&aacute;ndez</p>
+                <p> Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
               	<p>Giselle Castillo</p>
                 <p>@centenarioalta</p>
